pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-allowlist-single-ip.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-allowlist-single-ip
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/allowlist-source-range: "192.168.20.1"

spec:
  ingressClassName: nginx
  rules:
    - host: allowlist-source-range.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
